--- a/proiect/indicatoare/cale ferata/pagina16.html
+++ b/proiect/indicatoare/cale ferata/pagina16.html
@@ -48,18 +48,18 @@
         </div>
         <div class="text-box2">
             <div class="box2">
-                <a href=""><img src="ferata1.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/15_1.html"><img src="ferata1.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/15_1.html" class="vezi-buton2">vezi detalii</a>
                 <p> Trecere la nivel cu o cale ferată simplă, fără bariere, prevăzută cu semnale luminoase de avertizare a apropierii trenului</p>
             </div>
             <div class="box2">
-                <a href=""><img src="ferata2.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/15_2.html"><img src="ferata2.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/15_2.html" class="vezi-buton2">vezi detalii</a>
                 <p> Trecere la nivel cu o cale ferată dublă, fără bariere, prevăzută cu semnale luminoase de avertizare a apropierii trenului</p>
             </div>
             <div class="box2">
-                <a href=""><img src="ferata3.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/15_3.html"><img src="ferata3.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/15_3.html" class="vezi-buton2">vezi detalii</a>
                 <p>Trecere la nivel cu o cale ferată simplă cu semibarieră, prevăzută cu semnale luminoase de avertizare a apropierii trenului</p>
             </div>
         </div>
