--- a/proiect/indicatoare/dispozitive/pagina18.html
+++ b/proiect/indicatoare/dispozitive/pagina18.html
@@ -49,18 +49,18 @@
         </div>
         <div class="text-box2">
             <div class="box2">
-                <a href=""><img src="disp1.gif" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/17_1.html"><img src="disp1.gif" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/17_1.html" class="vezi-buton2">vezi detalii</a>
                 <p> Dispoziții luminoase pentru dirijarea circulația pe benzi reversibile</p>
             </div>
             <div class="box2">
-                <a href=""><img src="disp2.gif" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/17_2.html"><img src="disp2.gif" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/17_2.html" class="vezi-buton2">vezi detalii</a>
                 <p> Dispoziții luminoase pentru dirijarea circulația pe benzi reversibile</p>
             </div>
             <div class="box2">
-                <a href=""><img src="disp3.jpg" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/17_3.html"><img src="disp3.jpg" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/17_3.html" class="vezi-buton2">vezi detalii</a>
                 <p>Panou cu mesaje variabile</p>
             </div>
         </div>
