--- a/proiect/indicatoare/politia/pagina15.html
+++ b/proiect/indicatoare/politia/pagina15.html
@@ -49,63 +49,63 @@
         </div>
         <div class="text-box2">
             <div class="box2">
-                <a href=""><img src="politia1.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_1.html"><img src="politia1.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_1.html" class="vezi-buton2">vezi detalii</a>
                 <p> Atenție Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia2.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_2.html"><img src="politia2.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_2.html" class="vezi-buton2">vezi detalii</a>
                 <p> Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia3.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_3.html"><img src="politia3.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_3.html" class="vezi-buton2">vezi detalii</a>
                 <p>Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia4.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_4.html"><img src="politia4.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_4.html" class="vezi-buton2">vezi detalii</a>
                 <p> Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia5.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_5.html"><img src="politia5.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_5.html" class="vezi-buton2">vezi detalii</a>
                 <p>Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia6.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_6.html"><img src="politia6.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_6.html" class="vezi-buton2">vezi detalii</a>
                 <p> Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia7.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_7.html"><img src="politia7.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_7.html" class="vezi-buton2">vezi detalii</a>
                 <p> Reduceți viteza</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia8.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_8.html"><img src="politia8.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_8.html" class="vezi-buton2">vezi detalii</a>
                 <p>Măriți viteza</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia9.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_9.html"><img src="politia9.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_9.html" class="vezi-buton2">vezi detalii</a>
                 <p>Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia10.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_10.html"><img src="politia10.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_10.html" class="vezi-buton2">vezi detalii</a>
                 <p> Reduceți viteza</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia11.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_11.html"><img src="politia11.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_11.html" class="vezi-buton2">vezi detalii</a>
                 <p> Oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="politia12.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/14_12.html"><img src="politia12.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/14_12.html" class="vezi-buton2">vezi detalii</a>
                 <p> Semnalele polițistului din mașina de poliție</p>
             </div>
         </div>
