--- a/proiect/indicatoare/marcaje laterale/pagina10.html
+++ b/proiect/indicatoare/marcaje laterale/pagina10.html
@@ -49,63 +49,63 @@
         </div>
         <div class="text-box2">
             <div class="box2">
-                <a href=""><img src="laterale1.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_1.html"><img src="laterale1.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_1.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaje pe ziduri de sprijin și pe infrastructurile pasajelor inferioare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale2.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_2.html"><img src="laterale2.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_2.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaje pe ziduri de sprijin și pe infrastructurile pasajelor inferioare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale3.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_3.html"><img src="laterale3.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_3.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaje la pasaje care nu au asigurat gabaritul de înălțime</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale4.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_4.html"><img src="laterale4.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_4.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaje pe parapete</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale5.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_5.html"><img src="laterale5.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_5.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaje pe coronamentele podețelor</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale6.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_6.html"><img src="laterale6.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_6.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaje la refugii pe partea carosabilă</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale7.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_7.html"><img src="laterale7.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_7.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaje pe borduri</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale8.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_8.html"><img src="laterale8.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_8.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaje de interzicere a depășirii în unele curbe deosebit de periculoase</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale9.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_9.html"><img src="laterale9.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_9.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaj de reducere a vitezei înaintea unor curbe deosebit de periculoase</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale10.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_10.html"><img src="laterale10.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_10.html" class="vezi-buton2">vezi detalii</a>
                 <p> Săgeți de revenire pe banda aferentă sensului de mers</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale11.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_11.html"><img src="laterale11.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_11.html" class="vezi-buton2">vezi detalii</a>
                 <p> Săgeți de schimbare a benzii de circulație</p>
             </div>
             <div class="box2">
-                <a href=""><img src="laterale12.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/10_12.html"><img src="laterale12.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/10_12.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaje inscripționate pe partea carosabilă</p>
             </div>
         </div>
