--- a/proiect/indicatoare/marcaje transversale/pagina11.html
+++ b/proiect/indicatoare/marcaje transversale/pagina11.html
@@ -49,28 +49,28 @@
         </div>
         <div class="text-box2">
             <div class="box2">
-                <a href=""><img src="transversal1.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/11_1.html"><img src="transversal1.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/11_1.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaj de oprire</p>
             </div>
             <div class="box2">
-                <a href=""><img src="transversal2.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/11_2.html"><img src="transversal2.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/11_2.html" class="vezi-buton2">vezi detalii</a>
                 <p> Marcaj de cedarea trecerii</p>
             </div>
             <div class="box2">
-                <a href=""><img src="transversal3.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/11_3.html"><img src="transversal3.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/11_3.html" class="vezi-buton2">vezi detalii</a>
                 <p>Benzi rezonatoare din marcaj rutier</p>
             </div>
             <div class="box2">
-                <a href=""><img src="transversal4.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/11_4.html"><img src="transversal4.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/11_4.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaje de traversare pentru pietoni</p>
             </div>
             <div class="box2">
-                <a href=""><img src="transversal5.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/11_5.html"><img src="transversal5.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/11_5.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaj de traversare pentru biciclete</p>
             </div>
         </div>
