--- a/proiect/home/index.html
+++ b/proiect/home/index.html
@@ -15,7 +15,7 @@
             <div class="header-links">
                 <ul>
                     <li><a href="../login+register/register.html">Inregistrare</a></li>
-                    <li><a href="../login+register/login.html">Autentificare</a></li>
+                    <li><a href="../login+register/login.php">Autentificare</a></li>
                 </ul>
             </div>
         </nav>
