--- a/proiect/legislatie/c5_p1.html
+++ b/proiect/legislatie/c5_p1.html
@@ -178,6 +178,7 @@
             <ul>
                 <li><a href="../intrebariFrecvente/intrebariFrecvente.php">Intrebari frecvente</a></li>
                 <li><a href="../topScoliAuto/topScoliAuto.php">Top scoli auto</a></li>
+                <li><a href="../topUseri/topUseri.php">Top utilizatori</a></li>
                 <li><a href="../home/index.php">Acasa</a></li>
             </ul>
         </div>
