--- a/proiect/legislatie/c9_p2.html
+++ b/proiect/legislatie/c9_p2.html
@@ -112,6 +112,7 @@
                             (Alineatul (3) a fost modificat &icirc;n lege și actualizat și pe Școala Rutieră la la 09-04-2020)
                         </strong>
                     </u>
+                </em>
             </p>
             <h2>OUG - Articolul 44</h2>
             <p>
@@ -342,6 +343,7 @@
             <ul>
                 <li><a href="../intrebariFrecvente/intrebariFrecvente.php">Intrebari frecvente</a></li>
                 <li><a href="../topScoliAuto/topScoliAuto.php">Top scoli auto</a></li>
+                <li><a href="../topUseri/topUseri.php">Top utilizatori</a></li>
                 <li><a href="../home/index.php">Acasa</a></li>
             </ul>
         </div>
