--- a/proiect/indicatoare individuale/2_20.html
+++ b/proiect/indicatoare individuale/2_20.html
@@ -70,7 +70,7 @@
               <div class="panel-footer">
                 <div class="row1">
                     <div class="column" style="max-width: 50%;">
-                        <a href="2_19.html" class="btn" style="float: left;">Previous</a>
+                        <a href="2_19.php" class="btn" style="float: left;">Previous</a>
                     </div>
                     <div class="column" style="max-width: 50%;">
                         <a href="2_21.html" class="btn" style="float: right;">Urmator</a>
