--- a/proiect/indicatoare individuale/3_4.html
+++ b/proiect/indicatoare individuale/3_4.html
@@ -73,7 +73,7 @@
               <div class="panel-footer">
                 <div class="row1">
                     <div class="column" style="max-width: 50%;">
-                        <a href="3_3.html" class="btn" style="float: left;">Previous</a>
+                        <a href="3_3.php" class="btn" style="float: left;">Previous</a>
                     </div>
                     <div class="column" style="max-width: 50%;">
                         <a href="3_5.html" class="btn" style="float: right;">Urmator</a>
