--- a/proiect/indicatoare individuale/4_47.html
+++ b/proiect/indicatoare individuale/4_47.html
@@ -67,7 +67,7 @@
               <div class="panel-footer">
                 <div class="row1">
                     <div class="column" style="max-width: 50%;">
-                        <a href="4_46.html" class="btn" style="float: left;">Previous</a>
+                        <a href="4_46.php" class="btn" style="float: left;">Previous</a>
                     </div>
                     <div class="column" style="max-width: 50%;">
                         <a href="4_48.html" class="btn" style="float: right;">Urmator</a>
