--- a/proiect/indicatoare individuale/14_1.html
+++ b/proiect/indicatoare individuale/14_1.html
@@ -70,7 +70,7 @@
               <div class="panel-footer">
                 <div class="row1">
                     <div class="column" style="max-width: 50%;">
-                        <a href="13_11.html" class="btn" style="float: left;">Previous</a>
+                        <a href="13_11.php" class="btn" style="float: left;">Previous</a>
                     </div>
                     <div class="column" style="max-width: 50%;">
                         <a href="14_2.html" class="btn" style="float: right;">Urmator</a>
